--- a/style.css
+++ b/style.css
@@ -34,9 +34,22 @@ body{
   border-radius: 20px;
   justify-content: center;
   align-items: center;
- 
-
 }
+
+.wrapper2{
+  position: relative;
+  overflow: hidden;
+  display: block;
+  top:-50px;
+  width:100%;
+  height: 100%;
+  padding: 30px;
+  max-width: 500px;
+  border-radius: 20px;
+  justify-content: center;
+  align-items: center;
+}
+
 .mycontent{
   position: relative;
   overflow: hidden;
