--- a/style.css
+++ b/style.css
@@ -569,6 +569,11 @@ input[type = "checbox"]{
   max-height: 300px;
   margin-top:10px;
 }
+#keyinsights{
+  min-width: 530px;
+  max-height: 300px;
+  margin-top:-30px;
+}
 #inspiration{
   width: 530px;
   min-height: 300px;
