--- a/style.css
+++ b/style.css
@@ -36,6 +36,19 @@ body{
   align-items: center;
 }
 
+.wrapper2{
+  position: relative;
+  overflow: hidden;
+  display: block;
+  width:100%;
+  height: 200%;
+  padding: 30px;
+  max-width: 500px;
+  border-radius: 20px;
+  justify-content: center;
+  align-items: center;
+}
+
 .mycontent{
   position: relative;
   overflow: hidden;
