--- a/style.css
+++ b/style.css
@@ -41,7 +41,8 @@ body{
   overflow: hidden;
   display: block;
   width:100%;
-  height: 200%;
+  height: 000%;
+  top: 30px;
   padding: 30px;
   max-width: 500px;
   border-radius: 20px;
