added border to wrapper

--- a/style.css
+++ b/style.css
@@ -34,6 +34,7 @@ body{
   border-radius: 20px;
   justify-content: center;
   align-items: center;
+  border: 0.5px rgba(0, 0, 0, 0.5);;
 }
 
 .mycontent{
