--- a/style.css
+++ b/style.css
@@ -528,6 +528,7 @@ input[type = "checbox"]{
   height: 100%;
   max-width: 500px;
   border-radius: 20px;
+  border:0.5px rgba(0,0,0,0.25);
   justify-content: center;
   align-items: center;
   text-align:left;
@@ -617,7 +618,8 @@ align-items: left;
   justify-content: center;
   align-items: center;
   margin-right: 10px;
-  width: 20%
+  width: 20%;
+ background : white;
 }
 .buttonactive{
   color: white;
