--- a/style.css
+++ b/style.css
@@ -771,6 +771,11 @@ background:purple;
   left:65%;
   bottom:70%;
 }
+.lightbulb{
+  position: absolute;
+  left:80%;
+  bottom:70%;
+}
 .contentwrap{
   display: flex;
   padding: 10px;
