--- a/style.css
+++ b/style.css
@@ -528,7 +528,7 @@ input[type = "checbox"]{
   height: 100%;
   max-width: 500px;
   border-radius: 20px;
-  border:0.5px rgba(0,0,0,0.25);
+  border:0.5px solid rgba(0,0,0,0.25);
   justify-content: center;
   align-items: center;
   text-align:left;
