--- a/style.css
+++ b/style.css
@@ -528,13 +528,22 @@ input[type = "checbox"]{
   height: 100%;
   max-width: 500px;
   border-radius: 20px;
-  border:0.5px solid rgba(0,0,0,0.25);
+
   justify-content: center;
   align-items: center;
   text-align:left;
   background: #FFFFFF;
   margin-left: 10px;
  
+}
+#checkup,
+#goals,
+#inspiration,
+#insights,
+#navbar,
+#grapher
+{
+	border:0.5px solid rgba(0,0,0,0.25);
 }
 
 #checkup:hover,
