Added empty div to insights

--- a/style.css
+++ b/style.css
@@ -883,4 +883,10 @@ display: grid;
     display: none;
 
 }
-
+.empty-insight{
+  width: 75%;
+  height: 75%;
+  display: block;
+  background-color: grey;
+  border-radius: 10px;
+}
