--- a/style.css
+++ b/style.css
@@ -885,8 +885,11 @@ display: grid;
 }
 .empty-insight{
   width: 75%;
-  height: 75%;
+  height: 85%;
   display: block;
   background-color: grey;
   border-radius: 10px;
+  margin: 0;
+  background-color: rgba(171, 168, 168, 0.12);
+
 }
